--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
 # These individuals contributed to the hbnb project in this repository 
 
+Ezra Nobrega <ezra.nobrega@outlook.com>
 Fabien Chavonet <fabien.chavonet@holbertonstudents.com>
 Justin Majetich <justinmajetich@gmail.com>
 Nicolas Mancino <nicolas.mancino@holbertonstudents.com>
-Xavier Bertin <xavier.bertin@holbertonstudents.com>
